wow i should go to bed

--- a/glossary.tex
+++ b/glossary.tex
@@ -39,8 +39,27 @@
     description = {Values that specify aspects of a model's inherent architecture or its learning},
 }
 
+\newacronym[plural=ANNs]{ann}{ANN}{artificial neural network}
+
+\newacronym[plural=NNs]{nn}{NN}{neural network}
+
+
 \newglossaryentry{node}{
     name = node,
     plural = nodes,
+    description = {},
+}
+
+\newglossaryentry{activation-function}{
+    name = activation function,
+    plural = activation functions,
+    description = {},
+}
+
+\newacronym{relu}{ReLU}{rectified linear unit}
+
+\newglossaryentry{feature}{
+    name = feature,
+    plural = features,
     description = {},
 }
