--- a/main.tex
+++ b/main.tex
@@ -184,7 +184,7 @@ In practice, some conditions may be defined to determine when to cease training,
 
 When $\boldsymbol{\theta}$ reaches a critical point ($\nabla L = 0$), the updates to $\boldsymbol{\theta}$ vanish, and the algorithm has reached a stable ending point. In an ideal case, this would be the global minima of $L$, the best that the model could possibly reach given the training data. In reality, reaching the global minima is highly improbable, $\boldsymbol{\theta}$ is much more likely to be stuck at a local minima, or a saddle point. We will discuss methods to overcome these challenges in following sections.
 
-\section{Neural Networks}
+\section{Neural Networks (NNs)}
 
 \textbf{\Glspl{ann}} often shortened to \textbf{\glspl{nn}}, are one of the largest classes of models used in machine learning. NNs are composed of \textbf{\glspl{node}} that are arranged in layers. The first layer is called the \textbf{input layer}, and the last layer is called the \textbf{output layer}. All layers in between are called \textbf{hidden layers}. NNs are usually fully connected, meaning that each node in a layer is considered by every node in the next layer.
 
@@ -258,11 +258,11 @@ The addition of layers to a model increases its complexity, the number of which 
 
 \subsection{Dropout}
 
-\section{Techniques for Improving Optimization with Gradient Descent}
+\section{Gradient Descent Methods}
 
 \subsection{Data Batching}
 
-\subsection{Stochastic Gradient Descent}
+\subsection{Stochastic Gradient Descent (SGD)}
 
 \subsection{Momentum}
 
@@ -286,15 +286,15 @@ The addition of layers to a model increases its complexity, the number of which 
 
 \subsection{Cross Entropy Loss}
 
-\section{Reinforcement Learning}
+\section{Reinforcement Learning (RL)}
 
 \subsection{Policy Gradient}
 
-\subsection{Actor-Critic}
+\subsection{Actor-Critic Methods}
 
 \subsection{Reward Shaping}
 
-\subsection{Inverse Reinforcement Learning}
+\subsection{Inverse Reinforcement Learning (IRL)}
 
 \chapter{Robotic Systems and Control}
 
